# Functions--Tools--and-Agents-with-LangChain

./: 2.LCEL.ipynb  3.Function Calling.ipynb  4.Tagging and Extraction.ipynb  5.Tools and Routing.ipynb  6.Conversational Agent.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: 1.OpenAI Function Calling-checkpoint.ipynb  5.Tools and Routing-checkpoint.ipynb  6.Conversational Agent-checkpoint.ipynb  L6-functional_conversation-student-checkpoint.ipynb  pyproject-checkpoint.toml
